fixed finger gestures on mobile again

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     max-height: 45rem;
     padding: 2rem;
     perspective: 250rem;
-    touch-action: pan-x pan-y; /* allow browser gestures like pinch/zoom and scroll */
+    touch-action: none;
     animation: show-animate 2s forwards;
 }
 
